--- a/Stundenplan-Projekt/Stundenplan-Projekt/Stundenplan-Projekt.csproj
+++ b/Stundenplan-Projekt/Stundenplan-Projekt/Stundenplan-Projekt.csproj
@@ -43,9 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="labor.cs" />
+    <Compile Include="Fach.cs" />
+    <Compile Include="Lehrperson.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Raum.cs" />
+    <Compile Include="Schueler.cs" />
+    <Compile Include="Stundenplan.cs" />
+    <Compile Include="Verfuegbarkeit.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
