--- a/Stundenplan-Projekt/Stundenplan-Projekt/Stundenplan-Projekt.csproj
+++ b/Stundenplan-Projekt/Stundenplan-Projekt/Stundenplan-Projekt.csproj
@@ -46,13 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Einstellungen.cs" />
     <Compile Include="Fach.cs" />
+    <Compile Include="KlassenStundenplan.cs" />
     <Compile Include="Lehrperson.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Raum.cs" />
     <Compile Include="Schueler.cs" />
     <Compile Include="Stundenplan.cs" />
+    <Compile Include="StundenplanEintrag.cs" />
     <Compile Include="Verfuegbarkeit.cs" />
   </ItemGroup>
   <ItemGroup>
