--- a/Stundenplan-Projekt/Stundenplan-Projekt/Stundenplan-Projekt.csproj
+++ b/Stundenplan-Projekt/Stundenplan-Projekt/Stundenplan-Projekt.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Raum.cs" />
     <Compile Include="Schueler.cs" />
+    <Compile Include="SchulDaten.cs" />
     <Compile Include="Stundenplan.cs" />
     <Compile Include="StundenplanEintrag.cs" />
     <Compile Include="Verfuegbarkeit.cs" />
